--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
         "vue": "^2.5.7"
     },
     "dependencies": {
-        "vue-barcode": "^1.3.0"
+        "vue-barcode": "^1.3.0",
+        "laravel-echo": "^1.3.5",
+        "pusher-js": "^4.2.2",
+        "vue-select": "^2.4.0"
     }
 }
